// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pullRequests should retrieve DECLINED pull requests 1`] = `
Array [
  "pagelen",
  "values",
  "page",
  "size",
]
`;

exports[`pullRequests should retrieve MERGED pull requests 1`] = `
Array [
  "pagelen",
  "size",
  "values",
  "page",
  "next",
]
`;

exports[`pullRequests should retrieve OPEN pull requests 1`] = `
Array [
  "pagelen",
  "values",
  "page",
  "size",
]
`;

exports[`pullRequests should retrieve SUPERSEDED pull requests 1`] = `
Array [
  "pagelen",
  "values",
  "page",
  "size",
]
`;

exports[`should retrieve username projects 1`] = `
Array [
  "next",
  "values",
  "pagelen",
  "size",
  "page",
  "previous",
]
`;
